# lib/db/src/schema/classes.ts
@@ -8,6 +8,7 @@ export const classesTable = pgTable("classes", {
   institutionId: text("institution_id").notNull(),
   levelUnlocked: integer("level_unlocked").notNull().default(1),
   studentCapacity: integer("student_capacity").notNull().default(0),
+  smartboardCode: text("smartboard_code").unique(),
   createdAt: timestamp("created_at").notNull().defaultNow(),
 });
 
